src/components/card/VerticalCard6.module.scss
@import '../../utils/map-deep-get.scss';
@import '../../design-tokens/colors.scss';
@import '../../design-tokens/media.scss';
@import '../../design-tokens/typography.scss';

.verticalCard6 {
    transition: box-shadow 0.15s linear;
    position: relative;
    box-sizing: border-box;
    flex-direction: column;
    display: flex;
    height: 100%;
    background: #{map-deep-get($colors, 'colors', 'primary', 75)};
    box-shadow: 0 2px 0.2px rgba(0, 0, 0, 0.1);

    > a {
        display: flex;
        flex: 1 1 auto;
        justify-content: flex-end;
        flex-direction: column;
        outline-offset: 0;
        min-height: 80px;
        &:hover h1 {
            text-decoration: underline;
        }
    }

    figure,
    .figure.empty {
        min-height: 26.25rem;
        img {
            width: 100%;
            height: auto;
            object-fit: cover;
        }
        @media screen and (min-width: 768px) {
            img {
                position: absolute;
                height: 100%;
            }
        }
        figcaption {
            display: none;
        }
    }

    .figure.empty img {
        object-fit: none;
    }

    .prefix {
        justify-content: space-between;
        font-family: 'ProximaNovaBold', sans-serif;
        line-height: 1.2em;
        font-size: 0.8125rem;
        text-transform: uppercase;
        color: #{map-deep-get($colors, 'colors', 'primary', 75)};
        background: #{map-deep-get($colors, 'colors', 'neutral', 90)};
        letter-spacing: 1px;
        @media screen and (min-width: 640px) {
            font-size: 0.9375rem;
        }
    }

    .teaserText {
        position: absolute;
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        align-items: baseline;
    }

    h1 {
        color: #{map-deep-get($colors, 'colors', 'neutral', 90)};
        line-height: 120%;
    }

    &:focus:not(:active),
    &:hover:not(:active) {
        box-shadow: var(--card-box-shadow);
        z-index: 1;
    }
    &:active {
        z-index: 1;
        outline: 2px solid var(--card-outline-active);
    }
}

